# discord-motorsport-bot

./: .env.example  .gitignore  Dockerfile  GAME_DESIGN_DOCUMENT.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.hermes/plans/: 2026-06-27_bot-erweiterung-guis-tutorials-wiki.md  2026-06-28_motorsport-v2-daily-racing.md
bot/: __init__.py  config.py  embeds.py  main.py  scheduler.py
bot/cogs/: __init__.py  dashboard_cog.py  driver.py  general.py  qualifier.py  race.py  remaining.py  rnd_cog.py  setup_cog.py  team.py  training_cog.py  tutorial.py  wiki.py
bot/data/: guides.py
bot/views/: __init__.py  confirm.py  paginator.py
src/motorsport/: __init__.py
src/motorsport/data/: __init__.py  database.py  models.py  repository.py  tracks.py
src/motorsport/models/: __init__.py
src/motorsport/simulation/: __init__.py  driver_generator.py  engine.py  name_generator.py  ranking.py
src/motorsport/systems/: __init__.py  academy.py  events.py  rnd.py  season.py  setup.py  sponsors.py  training.py
tests/: test_full_season.py
